// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render completed challenge correctly 1`] = `
<Component>
  <Connect(Header)
    left={
      <IconButton
        name="deleteIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "fontWeight": "400",
          }
        }
        type="MissionHub"
      />
    }
    right={null}
    shadow={false}
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <Translate(ChallengeDetailHeader)
    canEditChallenges={true}
    challenge={
      Object {
        "end_date": "2018-09-22",
        "id": "1",
        "isPast": false,
        "title": "Read \\"There and Back Again\\"",
      }
    }
    onEdit={[Function]}
  />
</Component>
`;

exports[`should render joined challenge correctly 1`] = `
<Component>
  <Connect(Header)
    left={
      <IconButton
        name="deleteIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "fontWeight": "400",
          }
        }
        type="MissionHub"
      />
    }
    right={
      <Button
        buttonTextStyle={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "fontWeight": "400",
          }
        }
        onPress={[Function]}
        style={
          Object {
            "paddingRight": 10,
          }
        }
        text="COMPLETE"
        type="transparent"
      />
    }
    shadow={false}
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <Translate(ChallengeDetailHeader)
    canEditChallenges={true}
    challenge={
      Object {
        "end_date": "2018-09-22",
        "id": "1",
        "isPast": false,
        "title": "Read \\"There and Back Again\\"",
      }
    }
    onEdit={[Function]}
  />
</Component>
`;

exports[`should render unjoined challenge correctly 1`] = `
<Component>
  <Connect(Header)
    left={
      <IconButton
        name="deleteIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "fontWeight": "400",
          }
        }
        type="MissionHub"
      />
    }
    right={
      <Button
        buttonTextStyle={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "fontWeight": "400",
          }
        }
        onPress={[Function]}
        style={
          Object {
            "paddingRight": 10,
          }
        }
        text="JOIN"
        type="transparent"
      />
    }
    shadow={false}
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <Translate(ChallengeDetailHeader)
    canEditChallenges={true}
    challenge={
      Object {
        "end_date": "2018-09-22",
        "id": "1",
        "isPast": false,
        "title": "Read \\"There and Back Again\\"",
      }
    }
    onEdit={[Function]}
  />
</Component>
`;
